--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 Just Tetris
+To play tetris:
+-download all files and extract them into one folder/catalogue.
+-make sure you have installed python
+-either type and run TheGame.py via cmd or double click on TheGame.py icon
+-enjoy the game :)
